--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <script type="text/javascript" src="src/js/main.js"></script>
+    <script type="text/javascript" src="src/js/info.js"></script>
     <link rel="stylesheet" href="src/css/style.css" />
     <title>Client Info</title>
   </head>
